# docs/swagger.yaml
@@ -37,6 +37,9 @@ definitions:
         type: string
       emoji:
         type: string
+      hidden:
+        description: TODO test value in api
+        type: boolean
       id:
         type: string
       image_id:
@@ -49,6 +52,9 @@ definitions:
         type: string
       openedCount:
         type: integer
+      promo:
+        description: TODO test value
+        type: string
     type: object
   output.LevelDto:
     properties:
@@ -125,7 +131,7 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Dislike a deck
+      summary: DislikeDEPRECATED a deck
   /v1/deck/{deckId}/levels:
     get:
       parameters:
@@ -345,7 +351,7 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Dislike a question
+      summary: DislikeDEPRECATED a question
   /v1/question/{questionId}/like:
     post:
       description: Endpoint to like a particular question. Gives 409 in case of duplicating
@@ -401,6 +407,43 @@ paths:
             additionalProperties: true
             type: object
       summary: Get all likes made by a user
+  /v2/deck/{deckId}/like:
+    post:
+      description: Endpoint to like a specific deck. Gives 409 in case of duplicating
+        like
+      parameters:
+      - description: Deck ID
+        in: path
+        name: deckId
+        required: true
+        type: string
+      - description: User ID
+        in: query
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Conflict
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Like a deck
   /v2/decks:
     get:
       parameters:
@@ -419,6 +462,134 @@ paths:
               $ref: '#/definitions/output.DeckDTO'
             type: array
       summary: Get decks by lang code
+  /v2/question/{questionId}/react-dislike:
+    post:
+      description: Endpoint to dislike a specific question. Gives 409 in case of duplicating
+        dislike
+      parameters:
+      - description: question ID
+        in: path
+        name: questionId
+        required: true
+        type: string
+      - description: User ID
+        in: query
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Conflict
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Set dislike to a question
+  /v2/question/{questionId}/react-like:
+    post:
+      description: Endpoint to like a particular question. Gives 409 in case of duplicating
+        like
+      parameters:
+      - description: Question ID
+        in: path
+        name: questionId
+        required: true
+        type: string
+      - description: User ID
+        in: query
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Conflict
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Like a question
+  /v2/question/{questionId}/react-remove:
+    post:
+      description: Endpoint remove like from a particular question
+      parameters:
+      - description: Question ID
+        in: path
+        name: questionId
+        required: true
+        type: string
+      - description: User ID
+        in: query
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Undo like a question
+  /v2/user/{userId}/reactions:
+    get:
+      description: Retrieves all reactions made by a user on questions and decks.
+      parameters:
+      - description: The ID of the user.
+        in: path
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get all reactions made by a user
   /v3/decks:
     get:
       parameters:
